# Ray-Derby

./: .gitignore  CMakeLists.txt  lighting.fs  lighting.vs  main.cpp
shaders/: lighting.fs  lighting.vert
